fix misaligned meganav chevrons on mobile reduced nav

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -886,8 +886,9 @@ a:hover {
   top: 0.5rem !important;
 }
 
-#all-canonical-mobile .global-nav__header-link-anchor:after {
+#all-canonical-mobile .global-nav__header-link-anchor::after {
   @media (max-width: $breakpoint-small) {
     right: 1rem !important;
+    top: 1.25rem !important;
   }
 }
